--- a/pages/spacialty/spacialty.wxml
+++ b/pages/spacialty/spacialty.wxml
@@ -1,2 +1,2 @@
 <!--pages/spacialty/spacialty.wxml-->
-<text hidden='{{footControl!=0}}'>pages/spacialty/spacialty.wxml</text>
+<text>pages/spacialty/spacialty.wxml</text>
