--- a/pages/inquireResult/inquireResult.wxml
+++ b/pages/inquireResult/inquireResult.wxml
@@ -1,18 +1,22 @@
 <!--pages/inquireResult/inquireResult.wxml-->
 <view class='info-top'>
-<text>学号：{{stuNo}}</text>
-<text>姓名：{{name}}</text>
-<text>班级：{{classNo}}</text>
+  <text>学号：{{stuNo}}</text>
+  <text>姓名：{{name}}</text>
+  <text>班级：{{classNo}}</text>
 </view>
 
 <view class='info-mid'>
-<view class='info-title'>辅导员信息</view>
-<text>姓名：{{teaName}}</text>
-<text>手机：{{teaPhoneNum}}</text>
+  <view class='info-title'>辅导员信息</view>
+  <text>姓名：{{teaName}}</text>
+  <text>手机：{{teaPhoneNum}}</text>
 </view>
 
 <view class='info-bot'>
-<view class='info-title'>宿舍号</view>
-<view class='dormitory-info'>
-</view>
+  <view class='info-title'>宿舍:{{dormitory}}</view>
+  <view class='dormitory-info'>
+    <view wx:for="{{roommate}}" wx:key="roommate.name" class='dormitory-info-item'>
+      <text>{{item.name}}</text>
+      <text>{{item.phone}}</text>
+    </view>
+  </view>
 </view>
