--- a/pages/inquireResult/inquireResult.wxss
+++ b/pages/inquireResult/inquireResult.wxss
@@ -9,14 +9,13 @@ page{
 .info-top{
   width: 100%;
   height: 25%;
-  background-color: #f0f2f5;
-  border-bottom-left-radius: 100rpx;
-  border-bottom-right-radius: 100rpx;
+  background-color: #A46271;
   display: flex;
   flex-direction: column;
   justify-content: center;
   line-height: 50rpx;
   font-size: 16px;
+  color: white;
 }
 .info-top text{
   margin-left: 100rpx;
@@ -29,7 +28,7 @@ page{
   margin-top: 5%;
   display: flex;
   flex-direction: column;
-  
+  border: 1px solid #bbbbbb;
   font-size: 16px;
 }
 .info-mid text{
@@ -38,11 +37,12 @@ page{
 }
 .info-bot{
   width: 100%;
-  height: 45%;
+  height: 50%;
   background-color: #f0f2f5;
   margin-top: 5%;
   border-top-left-radius: 50rpx;
   border-top-right-radius: 50rpx;
+  border: 1px solid #bbbbbb;
 }
 .info-title{
   margin: 36rpx;
@@ -53,9 +53,22 @@ page{
   font-size: 14px;
   border-radius: 8px;
 }
+.info-bot .info-title{
+  width: 220rpx;
+}
 .dormitory-info{
   width: 650rpx;
-  height: 100rpx;
   background-color: white;
   margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  font-size: 14px;
+}
+.dormitory-info-item{
+  width:200rpx;
+  padding: 30rpx 40rpx;
+  display: flex;
+  flex-direction: column;
 }
